@@ -1,3 +1,10 @@
+2012-11-28  Richard Biener  <rguenther@suse.de>
+
+	PR c/35634
+	* c-gimplify.c (c_gimplify_expr): Gimplify self-modify expressions
+	here and use a type with proper overflow behavior for types that would
+	need to be promoted for the arithmetic.
+
 2012-04-11  Eric Botcazou  <ebotcazou@adacore.com>
 
 	PR target/52624
